--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="de">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,6 +14,8 @@
     button { font-family: inherit; cursor: pointer; border: none; background: none; }
     .skip-link { position: absolute; top: -100px; left: 10px; z-index: 10000; background: var(--primary); color: white; padding: 8px 16px; border-radius: var(--border-radius-sm); }
     .skip-link:focus { top: 10px; }
+    .construction-banner { position: fixed; top: 0; left: 0; right: 0; z-index: 200; background: linear-gradient(90deg, #f59e0b, #d97706); color: #000; text-align: center; padding: 10px 20px; font-size: 14px; font-weight: 600; }
+    .construction-banner span { margin-right: 8px; }
     .bg { position: fixed; inset: 0; z-index: -1; overflow: hidden; pointer-events: none; }
     .grain { position: absolute; inset: 0; background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 400 400' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)' opacity='0.03'/%3E%3C/svg%3E"); opacity: 0.4; }
     .glow { position: absolute; border-radius: 50%; filter: blur(120px); opacity: 0.12; animation: float 20s ease-in-out infinite; }
@@ -22,8 +24,8 @@
     .g3 { width: 400px; height: 400px; background: radial-gradient(circle, #06b6d4 0%, transparent 70%); top: 50%; left: 50%; transform: translate(-50%, -50%); animation-delay: -15s; }
     @keyframes float { 0%, 100% { transform: translate(0, 0) scale(1); } 33% { transform: translate(50px, -50px) scale(1.1); } 66% { transform: translate(-50px, 50px) scale(0.9); } }
     .container { max-width: 1200px; margin: 0 auto; padding: 0 24px; }
-    .main { min-height: 60vh; padding-top: 100px; }
-    .header { position: sticky; top: 0; z-index: 100; background: rgba(0, 0, 0, 0.8); backdrop-filter: blur(12px); border-bottom: 1px solid rgba(255, 255, 255, 0.08); }
+    .main { min-height: 60vh; padding-top: 140px; }
+    .header { position: fixed; top: 40px; left: 0; right: 0; z-index: 100; background: rgba(0, 0, 0, 0.8); backdrop-filter: blur(12px); border-bottom: 1px solid rgba(255, 255, 255, 0.08); }
     .header-inner { display: flex; align-items: center; justify-content: space-between; height: 72px; }
     .brand { font-weight: 600; font-size: 18px; transition: opacity var(--transition); }
     .brand:hover { opacity: 0.8; }
@@ -39,7 +41,7 @@
     .burger[aria-expanded="true"] span { background: transparent; }
     .burger[aria-expanded="true"] span::before { top: 0; transform: rotate(45deg); }
     .burger[aria-expanded="true"] span::after { top: 0; transform: rotate(-45deg); }
-    .mobile-nav { display: none; background: rgba(0, 0, 0, 0.95); backdrop-filter: blur(12px); border-top: 1px solid rgba(255, 255, 255, 0.08); }
+    .mobile-nav { display: none; position: fixed; top: 112px; left: 0; right: 0; background: rgba(0, 0, 0, 0.95); backdrop-filter: blur(12px); border-top: 1px solid rgba(255, 255, 255, 0.08); z-index: 99; }
     .mobile-nav[data-open="true"] { display: block; }
     .mobile-nav-inner { display: flex; flex-direction: column; gap: 8px; padding: 24px; }
     .mobile-link { padding: 12px 16px; border-radius: var(--border-radius-sm); color: var(--gray-300); font-weight: 500; transition: var(--transition); display: block; }
@@ -87,10 +89,13 @@
     .form-group input, .form-group textarea { width: 100%; padding: 12px 16px; background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: var(--border-radius-sm); color: var(--white); font-family: inherit; font-size: 14px; transition: var(--transition); }
     .form-group input:focus, .form-group textarea:focus { outline: none; border-color: var(--primary); background: rgba(255, 255, 255, 0.08); }
     .form-group textarea { resize: vertical; min-height: 120px; }
-    @media (max-width: 768px) { .nav { display: none; } .burger { display: block; } .footer-inner { flex-direction: column; text-align: center; gap: 24px; } .cookie-actions { flex-direction: column; } }
+    @media (max-width: 768px) { .nav { display: none; } .burger { display: block; } .footer-inner { flex-direction: column; text-align: center; gap: 24px; } .cookie-actions { flex-direction: column; } .construction-banner { font-size: 12px; padding: 8px 16px; } }
   </style>
 </head>
 <body>
+  <div class="construction-banner">
+    <span>🚧</span> This website is currently under construction. Some features may not be available yet.
+  </div>
   <a class="skip-link" href="#content">Skip to content</a>
   <div class="bg" aria-hidden="true">
     <div class="grain"></div>
@@ -100,7 +105,7 @@
   </div>
   <header class="header">
     <div class="container header-inner">
-      <a class="brand" href="index.html">Social Grow Shop</a>
+      <a class="brand" href="index.html">Social Growth Studio</a>
       <nav class="nav" aria-label="Main navigation">
         <a class="nav-link" href="index.html">Home</a>
         <a class="nav-link is-active" href="contact.html">Contact</a>
@@ -152,25 +157,8 @@
         <div style="margin-top: 64px; padding-top: 32px; border-top: 1px solid rgba(255, 255, 255, 0.08);">
           <h2 class="h3">Or reach us directly</h2>
           <p class="muted" style="margin-top: 12px;">
-            Email: <a href="mailto:hello@socialgrow.shop">hello@socialgrow.shop</a>
+            Email: <a href="mailto:hello@socialgrowthstudio.com">hello@socialgrowthstudio.com</a>
           </p>
-        </div>
-
-        <div style="margin-top: 48px; padding: 32px; background: rgba(255, 255, 255, 0.03); border: 1px solid rgba(255, 255, 255, 0.08); border-radius: 12px;">
-          <h3 style="margin-bottom: 16px;">Follow Us</h3>
-          <p class="muted" style="margin-bottom: 24px;">Our social media channels are coming soon! Stay tuned for updates, tips, and exclusive content.</p>
-          
-          <div style="display: flex; gap: 16px; align-items: center;">
-            <div style="width: 48px; height: 48px; background: rgba(255, 255, 255, 0.05); border-radius: 12px; display: flex; align-items: center; justify-content: center; opacity: 0.5;">
-              <img src="icon-facebook.png" alt="Facebook" style="width: 24px; height: 24px; filter: grayscale(1) brightness(2);" />
-            </div>
-            <div style="width: 48px; height: 48px; background: rgba(255, 255, 255, 0.05); border-radius: 12px; display: flex; align-items: center; justify-content: center; opacity: 0.5;">
-              <img src="icon-instagram.png" alt="Instagram" style="width: 24px; height: 24px; filter: grayscale(1) brightness(2);" />
-            </div>
-            <div style="width: 48px; height: 48px; background: rgba(255, 255, 255, 0.05); border-radius: 12px; display: flex; align-items: center; justify-content: center; opacity: 0.5;">
-              <img src="icon-tiktok.png" alt="TikTok" style="width: 24px; height: 24px; filter: grayscale(1) brightness(2);" />
-            </div>
-          </div>
         </div>
       </div>
     </div>
@@ -178,13 +166,12 @@
   <footer class="footer">
     <div class="container footer-inner">
       <div class="foot-left">
-        <div class="foot-title">Social Grow Shop</div>
+        <div class="foot-title">Social Growth Studio</div>
         <div class="foot-sub">© <span id="year"></span> All rights reserved.</div>
       </div>
       <div class="footer-links">
         <a href="contact.html">Contact</a>
         <a href="privacy.html">Privacy</a>
-        <a href="imprint.html">Imprint</a>
       </div>
     </div>
   </footer>
@@ -205,8 +192,6 @@
       </div>
       <div class="cookie-links">
         <a href="privacy.html">Privacy</a>
-        <span aria-hidden="true">·</span>
-        <a href="imprint.html">Imprint</a>
       </div>
     </section>
   </div>
